src/main/scala/io/github/edadma/iup/extern/LibIUP.scala


  /************************************************************************/
  /*                        Main API                                      */
  /************************************************************************/
  def IupOpen(argc: Ptr[CInt], argv: Ptr[Ptr[CString]]): CInt                                         = extern //37
  def IupClose(): Unit                                                                                = extern //38
  def IupIsOpened: CInt                                                                               = extern //39
  def IupImageLibOpen(): Unit                                                                         = extern //41
  def IupMainLoop: CInt                                                                               = extern //43
  def IupLoopStep: CInt                                                                               = extern //44
  def IupLoopStepWait: CInt                                                                           = extern //45
  def IupMainLoopLevel: CInt                                                                          = extern //46
  def IupFlush(): Unit                                                                                = extern //47
  def IupExitLoop(): Unit                                                                             = extern //48
  def IupPostMessage(ih: Ptr[Ihandle], s: /*const*/ CString, i: CInt, d: CDouble, p: Ptr[Unit]): Unit = extern //49
  def IupRecordInput(filename: /*const*/ CString, mode: CInt): CInt                                   = extern //51
  def IupPlayInput(filename: /*const*/ CString): CInt                                                 = extern //52
  def IupUpdate(ih: Ptr[Ihandle]): Unit                                                               = extern //54
  def IupUpdateChildren(ih: Ptr[Ihandle]): Unit                                                       = extern //55
  def IupRedraw(ih: Ptr[Ihandle], children: CInt): Unit                                               = extern //56
  def IupRefresh(ih: Ptr[Ihandle]): Unit                                                              = extern //57
  def IupRefreshChildren(ih: Ptr[Ihandle]): Unit                                                      = extern //58
  def IupExecute(filename: /*const*/ CString, parameters: /*const*/ CString): CInt                    = extern //60
  def IupExecuteWait(filename: /*const*/ CString, parameters: /*const*/ CString): CInt                = extern //61
  def IupHelp(url: /*const*/ CString): CInt                                                           = extern //62
  // def IupLog(type: /*const*/ CString, format: /*const*/ CString): Unit = extern //63
  def IupLoad(filename: /*const*/ CString): CString                                           = extern //65
  def IupLoadBuffer(buffer: /*const*/ CString): CString                                       = extern //66
  def IupVersion: CString                                                                     = extern //68
  def IupVersionDate: CString                                                                 = extern //69
  def IupVersionNumber: CInt                                                                  = extern //70
  def IupVersionShow(): Unit                                                                  = extern //71
  def IupSetLanguage(lng: /*const*/ CString): Unit                                            = extern //73
  def IupGetLanguage: CString                                                                 = extern //74
  def IupSetLanguageString(name: /*const*/ CString, str: /*const*/ CString): Unit             = extern //75
  def IupStoreLanguageString(name: /*const*/ CString, str: /*const*/ CString): Unit           = extern //76
  def IupGetLanguageString(name: /*const*/ CString): CString                                  = extern //77
  def IupSetLanguagePack(ih: Ptr[Ihandle]): Unit                                              = extern //78
  def IupDestroy(ih: Ptr[Ihandle]): Unit                                                      = extern //80
  def IupDetach(child: Ptr[Ihandle]): Unit                                                    = extern //81
  def IupAppend(ih: Ptr[Ihandle], child: Ptr[Ihandle]): Ptr[Ihandle]                          = extern //82
  def IupInsert(ih: Ptr[Ihandle], ref_child: Ptr[Ihandle], child: Ptr[Ihandle]): Ptr[Ihandle] = extern //83
  def IupGetChild(ih: Ptr[Ihandle], pos: CInt): Ptr[Ihandle]                                  = extern //84
  def IupGetChildPos(ih: Ptr[Ihandle], child: Ptr[Ihandle]): CInt                             = extern //85
  def IupGetChildCount(ih: Ptr[Ihandle]): CInt                                                = extern //86
  def IupGetNextChild(ih: Ptr[Ihandle], child: Ptr[Ihandle]): Ptr[Ihandle]                    = extern //87
  def IupGetBrother(ih: Ptr[Ihandle]): Ptr[Ihandle]                                           = extern //88
  def IupGetParent(ih: Ptr[Ihandle]): Ptr[Ihandle]                                            = extern //89
  def IupGetDialog(ih: Ptr[Ihandle]): Ptr[Ihandle]                                            = extern //90
  def IupGetDialogChild(ih: Ptr[Ihandle], name: /*const*/ CString): Ptr[Ihandle]              = extern //91
  def IupReparent(ih: Ptr[Ihandle], new_parent: Ptr[Ihandle], ref_child: Ptr[Ihandle]): CInt  = extern //92
  def IupPopup(ih: Ptr[Ihandle], x: CInt, y: CInt): CInt                                      = extern //94
  def IupShow(ih: Ptr[Ihandle]): CInt                                                         = extern //95
  def IupShowXY(ih: Ptr[Ihandle], x: CInt, y: CInt): CInt                                     = extern //96
  def IupHide(ih: Ptr[Ihandle]): CInt                                                         = extern //97
  def IupMap(ih: Ptr[Ihandle]): CInt                                                          = extern //98
  def IupUnmap(ih: Ptr[Ihandle]): Unit                                                        = extern //99
  def IupResetAttribute(ih: Ptr[Ihandle], name: /*const*/ CString): Unit                      = extern //101
  def IupGetAllAttributes(ih: Ptr[Ihandle], names: Ptr[CString], n: CInt): CInt               = extern //102
  def IupCopyAttributes(src_ih: Ptr[Ihandle], dst_ih: Ptr[Ihandle]): Unit                     = extern //103
  // def IupSetAtt(handle_name: /*const*/ CString, ih: Ptr[Ihandle], name: /*const*/ CString): Ptr[Ihandle] = extern //104
  def IupSetAttributes(ih: Ptr[Ihandle], str: /*const*/ CString): Ptr[Ihandle]                      = extern //105
  def IupGetAttributes(ih: Ptr[Ihandle]): CString                                                   = extern //106
  def IupSetAttribute(ih: Ptr[Ihandle], name: /*const*/ CString, value: /*const*/ CString): Unit    = extern //108
  def IupSetStrAttribute(ih: Ptr[Ihandle], name: /*const*/ CString, value: /*const*/ CString): Unit = extern //109
  // def IupSetStrf(ih: Ptr[Ihandle], name: /*const*/ CString, format: /*const*/ CString): Unit = extern //110
  def IupSetInt(ih: Ptr[Ihandle], name: /*const*/ CString, value: CInt): Unit       = extern //111
  def IupSetFloat(ih: Ptr[Ihandle], name: /*const*/ CString, value: CFloat): Unit   = extern //112
  def IupSetDouble(ih: Ptr[Ihandle], name: /*const*/ CString, value: CDouble): Unit = extern //113
  def IupSetRGB(ih: Ptr[Ihandle], name: /*const*/ CString, r: CUnsignedChar, g: CUnsignedChar, b: CUnsignedChar): Unit =
    extern //114
  def IupSetRGBA(ih: Ptr[Ihandle],
                 name: /*const*/ CString,
                 r: CUnsignedChar,
                 g: CUnsignedChar,
                 b: CUnsignedChar,
                 a: CUnsignedChar): Unit                                                          = extern //115
  def IupGetAttribute(ih: Ptr[Ihandle], name: /*const*/ CString): CString                         = extern //117
  def IupGetInt(ih: Ptr[Ihandle], name: /*const*/ CString): CInt                                  = extern //118
  def IupGetInt2(ih: Ptr[Ihandle], name: /*const*/ CString): CInt                                 = extern //119
  def IupGetIntInt(ih: Ptr[Ihandle], name: /*const*/ CString, i1: Ptr[CInt], i2: Ptr[CInt]): CInt = extern //120
  def IupGetFloat(ih: Ptr[Ihandle], name: /*const*/ CString): CFloat                              = extern //121
  def IupGetDouble(ih: Ptr[Ihandle], name: /*const*/ CString): CDouble                            = extern //122
  def IupGetRGB(ih: Ptr[Ihandle],
                name: /*const*/ CString,
                r: Ptr[CUnsignedChar],
                g: Ptr[CUnsignedChar],
                b: Ptr[CUnsignedChar]): Unit = extern //123
  def IupGetRGBA(ih: Ptr[Ihandle],
                 name: /*const*/ CString,
                 r: Ptr[CUnsignedChar],
                 g: Ptr[CUnsignedChar],
                 b: Ptr[CUnsignedChar],
                 a: Ptr[CUnsignedChar]): Unit                                                                   = extern //124
  def IupSetAttributeId(ih: Ptr[Ihandle], name: /*const*/ CString, id: CInt, value: /*const*/ CString): Unit    = extern //126
  def IupSetStrAttributeId(ih: Ptr[Ihandle], name: /*const*/ CString, id: CInt, value: /*const*/ CString): Unit = extern //127
  // def IupSetStrfId(ih: Ptr[Ihandle], name: /*const*/ CString, id: CInt, format: /*const*/ CString): Unit = extern //128
  def IupSetIntId(ih: Ptr[Ihandle], name: /*const*/ CString, id: CInt, value: CInt): Unit       = extern //129
  def IupSetFloatId(ih: Ptr[Ihandle], name: /*const*/ CString, id: CInt, value: CFloat): Unit   = extern //130
  def IupSetDoubleId(ih: Ptr[Ihandle], name: /*const*/ CString, id: CInt, value: CDouble): Unit = extern //131
  def IupSetRGBId(ih: Ptr[Ihandle],
                  name: /*const*/ CString,
                  id: CInt,
                  r: CUnsignedChar,
                  g: CUnsignedChar,
                  b: CUnsignedChar): Unit                                             = extern //132
  def IupGetAttributeId(ih: Ptr[Ihandle], name: /*const*/ CString, id: CInt): CString = extern //134
  def IupGetIntId(ih: Ptr[Ihandle], name: /*const*/ CString, id: CInt): CInt          = extern //135
  def IupGetFloatId(ih: Ptr[Ihandle], name: /*const*/ CString, id: CInt): CFloat      = extern //136
  def IupGetDoubleId(ih: Ptr[Ihandle], name: /*const*/ CString, id: CInt): CDouble    = extern //137
  def IupGetRGBId(ih: Ptr[Ihandle],
                  name: /*const*/ CString,
                  id: CInt,
                  r: Ptr[CUnsignedChar],
                  g: Ptr[CUnsignedChar],
                  b: Ptr[CUnsignedChar]): Unit = extern //138
  def IupSetAttributeId2(ih: Ptr[Ihandle], name: /*const*/ CString, lin: CInt, col: CInt, value: /*const*/ CString): Unit =
    extern //140
  def IupSetStrAttributeId2(ih: Ptr[Ihandle], name: /*const*/ CString, lin: CInt, col: CInt, value: /*const*/ CString): Unit =
    extern //141
  // def IupSetStrfId2(ih: Ptr[Ihandle], name: /*const*/ CString, lin: CInt, col: CInt, format: /*const*/ CString): Unit = extern //142
  def IupSetIntId2(ih: Ptr[Ihandle], name: /*const*/ CString, lin: CInt, col: CInt, value: CInt): Unit       = extern //143
  def IupSetFloatId2(ih: Ptr[Ihandle], name: /*const*/ CString, lin: CInt, col: CInt, value: CFloat): Unit   = extern //144
  def IupSetDoubleId2(ih: Ptr[Ihandle], name: /*const*/ CString, lin: CInt, col: CInt, value: CDouble): Unit = extern //145
  def IupSetRGBId2(ih: Ptr[Ihandle],
                   name: /*const*/ CString,
                   lin: CInt,
                   col: CInt,
                   r: CUnsignedChar,
                   g: CUnsignedChar,
                   b: CUnsignedChar): Unit                                                         = extern //146
  def IupGetAttributeId2(ih: Ptr[Ihandle], name: /*const*/ CString, lin: CInt, col: CInt): CString = extern //148
